...
            tools:ignore="TextContrastCheck"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/toolbar_logo"/>

        <ImageView
            android:id="@+id/action_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_logout"
            tools:ignore="ContentDescription,ImageContrastCheck"
...
